# Copyright (C) 2012 Khaled Hosny
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/mk/layout.am

CURSOR_LIST = \
	ddcursor \
	elipsecur \
	eyedropper \
	featurescursor \
	filledelipsecur \
	filledrectcur \
	flipcur \
	hand \
	kerncur \
	knifecur \
	lbearcur \
	linecur \
	magminus \
	magplus \
	nesw \
	nwse \
	pencil \
	pencur \
	perspectivecur \
	pointercic \
	pointerg2cic \
	pointerhvcic \
	pointerleft \
	pointerright \
	pointersqr \
	pointertri \
	polycur \
	prohibition \
	rbearcur \
	rectcur \
	rotate3dcur \
	rotatecur \
	rulercur \
	scalecur \
	setwidthcur \
	shift \
	skewcur \
	starcur

dist_cursors_DATA = $(CURSOR_LIST)

